# chaogu-han

./: .gitignore  README.md  pyproject.toml
api/: __init__.py  app.py
data/historical/: README.md
docs/: ROADMAP.md
scripts/: demo.py  serve.py
stock_trainer/: __init__.py  analytics.py  broker.py  clock.py  data.py  historical.py  models.py  runs.py  simulator.py
tests/: test_engine.py
web/: app.js  index.html  styles.css
